Archive/06368039556497238d7e490ce74bd961-542192d2d8aca3c820c7acc656fa0c68/output
+ g++ -std=c++11 main.cpp
main.cpp: In function ‘int main()’:
main.cpp:10:5: error: ‘bar’ was not declared in this scope
     bar b;
     ^
main.cpp:10:5: note: suggested alternative:
main.cpp:4:12: note:   ‘foo::bar’
     struct bar {};
            ^
main.cpp:10:9: error: expected ‘;’ before ‘b’
     bar b;
         ^
main.cpp:12:12: error: ‘b’ was not declared in this scope
     begin(&b);
            ^
